# QUBO-Research-Project

./: .gitignore  README.md  how-to-run.md  project-current-progress.md  project-explanation.md  project-milestones.md  project-report.md  project-research-report.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/experiments/: backend_benchmark_campaign.yaml  classical_maxcut.yaml  classical_min_vertex_cover.yaml  final_report_backend_campaign.yaml  final_report_benchmark_campaign.yaml  final_report_landscape_analysis.yaml  final_report_qaoa_initialization_comparison.yaml  large_final_report_backend_campaign.yaml  large_final_report_benchmark_campaign.yaml  large_final_report_landscape_maxcut_er8_seed11.yaml  large_final_report_landscape_maxcut_weighted_er8_seed17.yaml  large_final_report_landscape_mvc_cycle8.yaml  (+23 more)
documents/: final-benchmark-explanation.md  final-benchmark-session-20260506.md  final-result-discussions.md  how-to-run.md  large-final-benchmark-explanation.md  large-final-benchmark-session-20260506.md  large-final-result-discussions.md  midterm-report-draft.md  midterm-report-structure.md  project-current-progress.md  project-explanation.md  project-milestones.md  project-report.md
tests/: conftest.py  test_backend_comparison.py  test_benchmark_campaign.py  test_campaign_summary.py  test_landscape_analysis.py  test_maxcut.py  test_min_vertex_cover.py  test_openjij_solver.py  test_qaoa.py  test_qaoa_initialization.py  test_quantum_backends.py  test_qubo_model.py  test_qubo_to_ising.py  test_runner.py  test_solver_comparison.py  test_vqe.py
(+53 files in other folders)
